--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,8 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": true,
   "useWorkspaces": false,
-  "packages": ["packages/*"],
-  "version": "1.0.0"
+  "packages": [
+    "packages/*"
+  ],
+  "version": "1.0.1"
 }
