update: 准备阶段相关代码更新

--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,10 @@
   "useNx": true,
   "useWorkspaces": false,
   "packages": [
-    "packages/*"
+    "core/*",
+    "commands/*",
+    "models/*",
+    "utils/*"
   ],
   "version": "1.0.1"
 }
