--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dorsey-cli-cn/log",
-  "version": "1.0.1",
-  "description": "@dorsey-cli-cn log",
+  "name": "@dorsey-cli-cn/exec",
+  "version": "1.0.0",
+  "description": "@dorsey-cli-cn exec",
   "author": "dorsey <406100205@qq.com>",
   "homepage": "https://github.com/Dorsey-CN/dorsey-cn-cli#readme",
   "license": "ISC",
@@ -16,20 +16,18 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@dorsey-cli-cn/log": "file:../../utils/log",
+    "@dorsey-cli-cn/package": "file:../../models/package"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Dorsey-CN/dorsey-cn-cli.git"
   },
   "scripts": {
-    "test": "node ./__tests__/@dorsey-cli-cn/log.test.js"
+    "test": "node ./__tests__/@dorsey-cli-cn/exec.test.js"
   },
   "bugs": {
     "url": "https://github.com/Dorsey-CN/dorsey-cn-cli/issues"
-  },
-  "dependencies": {
-    "npmlog": "^6.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "^18.8.0"
   }
 }
