--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -27,5 +27,8 @@
     "axios": "^0.27.2",
     "semver": "^7.3.7",
     "url-join": "^4.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.8.0"
   }
 }
