--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -31,6 +31,12 @@
   },
   "dependencies": {
     "@dorsey-cli-cn/command": "file:../../models/command",
-    "@dorsey-cli-cn/log": "file:../../utils/log"
+    "@dorsey-cli-cn/log": "file:../../utils/log",
+    "@dorsey-cli-cn/request": "file:../../utils/request",
+    "@dorsey-cli-cn/package": "file:../../models/package",
+    "@dorsey-cli-cn/utils": "file:../../utils/utils",
+    "fs-extra": "^10.1.0",
+    "inquirer": "^8.0.0",
+    "semver": "^7.3.7"
   }
 }
