--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@dorsey-cli-cn/log": "file:../../utils/log",
-    "@dorsey-cli-cn/package": "file:../../models/package"
+    "@dorsey-cli-cn/package": "file:../../models/package",
+    "@dorsey-cli-cn/utils": "file:../../utils/utils"
   },
   "repository": {
     "type": "git",
