--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -32,11 +32,14 @@
   "dependencies": {
     "@dorsey-cli-cn/command": "file:../../models/command",
     "@dorsey-cli-cn/log": "file:../../utils/log",
-    "@dorsey-cli-cn/request": "file:../../utils/request",
     "@dorsey-cli-cn/package": "file:../../models/package",
+    "@dorsey-cli-cn/request": "file:../../utils/request",
     "@dorsey-cli-cn/utils": "file:../../utils/utils",
+    "ejs": "^3.1.8",
     "fs-extra": "^10.1.0",
+    "glob": "^8.0.3",
     "inquirer": "^8.0.0",
+    "kebab-case": "^1.0.2",
     "semver": "^7.3.7"
   }
 }
