--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -17,9 +17,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@dorsey-cli-cn/log": "file:../../utils/log",
-    "@dorsey-cli-cn/package": "file:../../models/package",
-    "@dorsey-cli-cn/utils": "file:../../utils/utils"
+    "@dorsey-cli-cn/log": "^1.0.2",
+    "@dorsey-cli-cn/package": "^1.0.2",
+    "@dorsey-cli-cn/utils": "^1.0.2"
   },
   "repository": {
     "type": "git",
