--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -13,6 +13,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Dorsey-CN/dorsey-cn-cli.git"
