--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "lib/index.js",
   "bin": {
-    "dorsey-cli-cn": "bin/index.js"
+    "dorsey-cli": "bin/index.js"
   },
   "directories": {
     "lib": "lib",
